--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Main repository for CSE341 Backend Development II work",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
