--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "description": "Main repository for CSE341 Backend Development II work",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jjossie/cse341-backend-ii.git"
+    "url": "git+https://github.com/jjossie/cse341-contacts.git"
   },
   "author": "Joel Jossie",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jjossie/cse341-backend-ii/issues"
+    "url": "https://github.com/jjossie/cse341-contacts/issues"
   },
-  "homepage": "https://github.com/jjossie/cse341-backend-ii#readme",
+  "homepage": "https://github.com/jjossie/cse341-contacts#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3"
   }
 }
