--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "homepage": "https://github.com/jjossie/cse341-contacts#readme",
   "dependencies": {
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^4.13.0",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
