--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon app.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "swagger": "node ./swagger.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
@@ -31,6 +33,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "swagger-autogen": "^2.22.0"
   }
 }
